# browser-bookmark-sync

./: .gitignore  CHANGELOG.md  CHANGELOG_2024-11-30.md  CLEANUP_SUCCESS_REPORT.md  COMPLETION_REPORT.md  CRITICAL_ISSUE_FIREFOX_SYNC.md  Cargo.toml  FINAL_SUMMARY.md  FINAL_VERIFICATION.md  IMPROVEMENTS.md  PROJECT_SUMMARY.md  QUALITY_CHECKLIST.md  QUICKSTART.md  README.md  README_CN.md  ROADMAP.md  SESSION_COMPLETE.md  SESSION_SUMMARY.md  TEST_RESULTS.md  USAGE.md  USAGE_GUIDE.md  analyze-duplicates.sh  comprehensive-test.sh  empty_bookmarks.json  sync-now.command  test-production.sh  test-sync.sh
.github/workflows/: ci.yml
archive/reports/: BUG_FIX_REPORT.md  DATA_QUALITY_ISSUE.md  FIREFOX_SYNC_REALITY.md  FIREFOX_SYNC_SOLUTION.md  FUNCTIONALITY_REPORT.md  QUICK_REFERENCE.md  SYNC_VERIFICATION_REPORT.md  TEST_REPORT.md  TEST_RESULTS.md
archive/scripts/: comprehensive-test.sh  disable_firefox_sync_bookmarks.sh  export_to_safari.py  fix_firefox_sync_conflict.sh  real-world-test.sh  verify_sync.sh
examples/: custom-rules.json  quick_start.sh
proptest-regressions/: sync.txt  url_checker.txt
scripts/: analyze_bookmarks.py  fix_nested_folders.py  full_cleanup_waterfox.sh  full_process.sh  full_process_all.sh  full_process_v2.sh  full_process_v3.sh  full_process_v4.sh  full_process_v5.sh  full_waterfox_process.sh  merge_results.sh  process_waterfox_full.sh  quick_check_test.sh  quick_temp.sh  test_check_command.sh  test_check_structure.sh  test_export_quality.sh  test_folder_structure.sh  test_import_export.sh  test_organize_file.sh  test_waterfox_process.sh
src/: browser_utils.rs  browsers.rs  chromium_sync.rs  cleanup.rs  cloud_reset.rs  db_safety.rs  enhanced_rules.rs  firefox_sync.rs  firefox_sync_api.rs  hackbrowserdata.rs  incremental_sync.rs  main.rs  progress.rs  scheduler.rs  sync.rs  sync_flags.rs  url_checker.rs  validator.rs
src/crypto/: chromium.rs  mod.rs
src/data_types/: cookie.rs  download.rs  mod.rs  password.rs
tests/: integration_test 2.rs  integration_test.rs
