[package]
name = "browser-bookmark-sync"
version = "0.1.0"
edition = "2021"
authors = ["Browser Sync Team"]
description = "A reliable cross-browser bookmark synchronization tool"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system operations
walkdir = "2.4"
sha2 = "0.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime (for scheduled tasks)
tokio = { version = "1.35", features = ["full"] }
tokio-cron-scheduler = "0.10"

# macOS specific
[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.6"

[dev-dependencies]
tempfile = "3.8"
